--- a/MarsRoverKata/MarsRoverKata.csproj
+++ b/MarsRoverKata/MarsRoverKata.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Coordinate.cs" />
     <Compile Include="MarsRover.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoverDirection.cs" />
