--- a/MarsRoverKata/MarsRoverKata.csproj
+++ b/MarsRoverKata/MarsRoverKata.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Coordinate.cs" />
+    <Compile Include="Grid.cs" />
     <Compile Include="MarsRover.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoverDirection.cs" />
